# Signal-Sync

./: README.md  bgv_output.json  fetch_company_details.py  pyproject.toml  requirements.txt  run_extraction.py  suggestions.txt
db/: chroma.sqlite3
frontend/ui/: Details.docx  jsconfig.json  middleware.js  package-lock.json  package.json
frontend/ui/components/: ProfileEditForm.jsx  ProfileView.jsx  StockDetails.jsx
frontend/ui/data/: team_data.js  team_features.js
helpers/pdf_extraction/: __init__.py  annual_report_pdf.py  table_extractor.py  text_extractor.py
models/: model_frontend.py
pipeline/: allocation.py  pipeline.py
src/reddit_sentiment/: .env.example  README.md  __init__.py  main.py  requirements.txt  test_connection.py
src/reddit_sentiment/config/: __init__.py  config.py
src/reddit_sentiment/output/: .gitkeep  apple_sentiment_results_20260117_181922.json  infosys_sentiment_results_20260118_124544.json  infosys_sentiment_results_20260121_213712.json  reliance_sentiment_results_20260117_182857.json  tcs_sentiment_results_20260118_125954.json  tcs_sentiment_results_20260118_130046.json  tesla_sentiment_results_20260117_123848.json  tesla_sentiment_results_20260117_124147.json  tesla_sentiment_results_20260117_181114.json  tesla_sentiment_results_20260117_210106.json
src/reddit_sentiment/services/: __init__.py  reddit_scraper.py  sentiment_analyzer.py  text_processor.py
src/signal_sync/: __init__.py  crew.py  main.py
src/signal_sync/config/: agents.yaml  tasks.yaml
streamlit_app/: app.py  bgv_output.json
streamlit_app/db/: chroma.sqlite3
(+48 files in other folders)
