[project]
name = "signal_sync"
version = "0.1.0"
description = "Signal Sync - Agentic AI Retail Investment Advisor with BGV Verification"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "yfinance>=0.2.36",
    "pandas>=2.0.0",
    "pdfplumber>=0.10.0",
    "streamlit>=1.31.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
]

[project.scripts]
signal_sync = "signal_sync.main:run"
run_crew = "signal_sync.main:run"
run_bgv = "signal_sync.main:run"
train = "signal_sync.main:train"
replay = "signal_sync.main:replay"
test = "signal_sync.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
